fix alignment of back button on small and padding on medium

--- a/client/components/videos-ui/style.scss
+++ b/client/components/videos-ui/style.scss
@@ -218,7 +218,7 @@
 	}
 
 	.videos-ui__bar {
-		padding: 20px 0 15px;
+		padding: 20px 20px 15px;
 		display: flex;
 		flex-direction: row;
 		align-items: center;
@@ -245,7 +245,7 @@
 				margin: auto;
 				flex-direction: row;
 				justify-content: space-between;
-				padding: 60px 0;
+				padding: 60px 40px;
 
 				.videos-ui__titles {
 					flex-basis: auto;
